# skypro_beta

./: README.md  extra_task.py  main.py  masks.py  pyproject.toml  utils.py  widget.py
src/: extra_task.py  main.py  masks.py  processing.py  utils.py  widget.py
